GNOME Bugzilla – Bug 754742
Crashes when writing a playlist
Last modified: 2015-09-08 20:03:50 UTC
Created attachment 310932 [details] [review] patch This is another crash which occurs when saving a playlist. This was caused by using g_settings_get_flags instead of g_settings_get_enum for reading the rename-convert-spaces setting. Debian bug: https://bugs.debian.org/798304
Review of attachment 310932 [details] [review]: Thanks for the patch! I pushed it to master as commit 7c440592e4ff95f3c8cec438019d270ca784b3d8.