Fix crash when writing playlists

The error was caused by reading the 'rename-convert-spaces' setting with
g_settings_get_flags() instead of g_settings_get_enum().

https://bugzilla.gnome.org/show_bug.cgi?id=754742